Исправлен код после ревью