@@ -1,31 +1,22 @@
 package bjs257886;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.TreeMap;
-import java.util.stream.IntStream;
+import java.util.stream.Collectors;
 
 public class TaskStreamApi {
     private static final String ALPHABET = "abcdefghijklmnopqrstuvwxyz";
 
     public static Set<List<Integer>> findUniquePairsNumbers(Set<Integer> numbersParameter, int targetNumber) {
-        Map<Integer, Integer> map = new TreeMap<>();
-        List<Integer> numbers = new ArrayList<>(numbersParameter);
-        Set<List<Integer>> result = new HashSet<>();
-        IntStream.range(0, numbers.size())
-                .forEach(i -> {
-                    int complement = targetNumber - numbers.get(i);
-                    if (map.containsKey(complement)) {
-                        result.add(Arrays.asList(numbers.get(i), complement));
-                    }
-                    map.put(numbers.get(i), i);
-                });
-        return result;
+        return numbersParameter.stream()
+                .filter(firstNum -> {
+                    int secondNum = targetNumber - firstNum;
+                    return firstNum < secondNum && numbersParameter.contains(secondNum);
+                })
+                .map(firstNum -> List.of(firstNum, targetNumber - firstNum))
+                .collect(Collectors.toSet());
     }
 
     public static List<String> sortCountriesAndGetCapitals(Map<String, String> countryToCapital) {
@@ -37,7 +28,7 @@ public class TaskStreamApi {
 
     public static List<String> findAndSortStrings(List<String> strings, char startSymbol) {
         return strings.stream()
-                .filter(string -> string.charAt(0) == startSymbol)
+                .filter(string -> string.startsWith(String.valueOf(startSymbol)))
                 .sorted(Comparator.comparing(String::length))
                 .toList();
     }
@@ -46,9 +37,11 @@ public class TaskStreamApi {
         return numbers.stream().map(Integer::toBinaryString).toList();
     }
 
-    public static List<String> filterStringsAndSortByLength(List<String> strings) {
+    public static List<String> filterStringsAndSortByLength(List<String> strings, String alphabet) {
+        alphabet = ALPHABET;
+        String finalAlphabet = alphabet;
         return strings.stream()
-                .filter(string -> !string.isBlank() && string.matches("[" + ALPHABET + "]*"))
+                .filter(string -> !string.isBlank() && string.matches("[" + finalAlphabet + "]*"))
                 .sorted(Comparator.comparing(String::length))
                 .toList();
     }
